# expo-hearing-aid

./: App.tsx  README.md  app.json  metro.config.js  package.json  апп
.github/workflows/: build-apk.yml
android/app/src/main/res/values/: colors.xml
modules/hearing-aid-engine/: expo-module.config.json  index.ts
modules/hearing-aid-engine/android/: CMakeLists.txt  build.gradle
modules/hearing-aid-engine/android/src/main/: AndroidManifest.xml
modules/hearing-aid-engine/android/src/main/cpp/: AudioEngine.cpp
modules/hearing-aid-engine/android/src/main/java/: HearingAidEngineModule.kt
modules/hearing-aid-engine/android/src/main/java/com/hearingaid/: HearingAidEngineModule.kt  HearingAidEnginePackage.kt  HearingAidService.kt
